updated game and index html

--- a/game.css
+++ b/game.css
@@ -3,3 +3,9 @@
     padding: 0;
 }
 
+.answer-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 25px;
+}
